--- a/index.html
+++ b/index.html
@@ -6,24 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">>
-    <title>KFC</title>
+    <title>Huertos y asi</title>
 </head>
 
-<header>
-    <div class="clase1">
-        <img src="img/KFC_Logo.jpg" alt="kfc" >
-    </div>
-    <div class="clase2">
-       <a href="#">  <i class="material-icons">home</i> Home</a>
-        <a href="#"> <i class="material-icons">call</i>Contactos</a>
-        <a href="#"> <i class="material-icons">location_on</i> Ubicacion</a>
-        <i class="material-icons">search</i><input type="text" name="buscar" id="buscar" placeholder="buscar">
-    </div>
-</header>
+
 
 <body>
+    <header>
+        <div class="clase1">
+            <img src="img/images.png" alt="logo" class="as">
+        </div>
+        <div class="clase2">
+            <a href="#"> <i class="material-icons">home</i> Home</a>
+            <a href="#"> <i class="material-icons">call</i>Contactos</a>
+            <a href="#"> <i class="material-icons">location_on</i> Ubicacion</a>
+            <i class="material-icons">search</i><input type="text" name="buscar" id="buscar" placeholder="buscar">
+        </div>
+        <hr>
+        <div>
+            <img src="img/entrada-huerto-urbano-diseno.jpg" alt="huerto" width="97%" class="clase2">
+            <hr>
+        </div>
+    </header>
 
+    <section >
+        <div class="contenedor">
+            <div class="cont">
+                <h1>asdasd</h1>
+                <div class="ing">
+                    <img src="img/12.jpg" alt="huerto" class="imgs">
+                </div>
+                
+            </div>
+            <div class="cont">
+                <h1>asdasd</h1>
+                <div class="ing"></div>
+                <img src="img/12.jpg" alt="huerto" class="imgs">
+                </div>
+            </div>
+            <div class="cont">
+                <h1>asdasd</h1>
+                <img src="img/12.jpg" alt="huerto" class="imgs">
+            </div>
+            <div class="cont">
+                <h1>asdasd</h1>
+                <img src="img/12.jpg" alt="huerto" class="imgs">
+            </div>
+
+        </div>
+
+    </section>
 
 </body>
+<footer>
+</footer>
 
 </html>
+
+<!--
+        <img src="img/12.jpg" alt="huerto" class="imgs">
+        <img src="img/13.jpg" alt="huerto" class="imgs">
+        <img src="img/14.jpg" alt="huerto" class="imgs">
+        <img src="img/15.jpg" alt="huerto" class="imgs">-->
