--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/estilos.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">>
-    <title>Huertos y asi</title>
+    <title>Huertos</title>
 </head>
 
-
-
 <body>
-    <header>
+    <header class="clase2">
         <div class="clase1">
             <img src="img/images.png" alt="logo" class="as">
         </div>
-        <div class="clase2">
+        <div class="der">
             <a href="#"> <i class="material-icons">home</i> Home</a>
             <a href="#"> <i class="material-icons">call</i>Contactos</a>
             <a href="#"> <i class="material-icons">location_on</i> Ubicacion</a>
@@ -24,47 +22,60 @@
         </div>
         <hr>
         <div>
-            <img src="img/entrada-huerto-urbano-diseno.jpg" alt="huerto" width="97%" class="clase2">
+            <img src="img/entrada-huerto-urbano-diseno.jpg" alt="huerto" width="97%" class="fto">
             <hr>
         </div>
     </header>
 
-    <section >
-        <div class="contenedor">
-            <div class="cont">
-                <h1>asdasd</h1>
-                <div class="ing">
-                    <img src="img/12.jpg" alt="huerto" class="imgs">
-                </div>
-                
+    <section>
+        <div class="pracnt">
+            <p>Clase</p>
+            <div class="contndr">
+                <img src="img/1.jpg" alt="img" class="img">
+                <P>Las plantas son vida </P>
             </div>
-            <div class="cont">
-                <h1>asdasd</h1>
-                <div class="ing"></div>
-                <img src="img/12.jpg" alt="huerto" class="imgs">
-                </div>
-            </div>
-            <div class="cont">
-                <h1>asdasd</h1>
-                <img src="img/12.jpg" alt="huerto" class="imgs">
-            </div>
-            <div class="cont">
-                <h1>asdasd</h1>
-                <img src="img/12.jpg" alt="huerto" class="imgs">
+            <p>Huertos</p>
+
+            <div class="contndr">
+                <p>Huerto</p>
+                <img src="img/2.jpg" alt="img" class="img">
+                <P>Los huertos son vida</P>
             </div>
 
-        </div>
+            <div class="contndr">
+                <p>Huertos</p>
+                <img src="img/3.jpg" alt="img" class="img">
+                <P>Los huertos son vida</P>
+            </div>
+            <br>
+            <div class="pracnt">
+                <p>Huertos</p>
+                <div class="contndr">
+                    <img src="img/4.jpg" alt="img" class="img">
+                    <P>Los huertos son vida</P>
+                </div>
+                <div class="contndr">
+                    <p>Huertos</p>
+                    <img src="img/5.jpg" alt="img" class="img">
+                    <P>Los huertos son vida</P>
+                </div>
+
+                <div class="contndr">
+                    <p>Huertos</p>
+                    <img src="img/6.jpg" alt="img" class="img">
+                    <P>Los huertos son vida</P>
+                </div>
+
 
     </section>
 
 </body>
 <footer>
+    <div class="clase1">
+        <center>
+            <h1>FOOTER</h1>
+        </center>
+    </div>
 </footer>
 
 </html>
-
-<!--
-        <img src="img/12.jpg" alt="huerto" class="imgs">
-        <img src="img/13.jpg" alt="huerto" class="imgs">
-        <img src="img/14.jpg" alt="huerto" class="imgs">
-        <img src="img/15.jpg" alt="huerto" class="imgs">-->
